# SLAE

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Acceleration/: Cheb_Accel.cpp  Cheb_Accel.hpp
src/CSR/: MatrixOnCSR.hpp
src/Gauss/: GaussReverse.cpp  GaussReverse.hpp
src/IterationMethods/: Methods.hpp
src/IterationMethods/Gauss-Seidel/: GS.cpp  GS.hpp  GS_Iterations.cpp  GS_Iterations.hpp  SGS.cpp  SGS.hpp  SGSwCA.cpp  SGSwCA.hpp
src/IterationMethods/Gradient/: CG.cpp  CG.hpp  SGD.cpp  SGD.hpp
src/IterationMethods/Jacobi/: Jacobi.cpp  Jacobi.hpp
src/IterationMethods/SOR/: SOR.cpp  SOR.hpp
src/IterationMethods/SimpleIteration/: SI.hpp  SIwCA.cpp  SIwCA.hpp
src/Matrixes/CSR/: MatrixOnCSR.cpp  MatrixOnCSR.hpp
src/Matrixes/SMatrix/: StandardMatrix.cpp  StandardMatrix.hpp
src/Matrixes/Tridiag/: Tridiag.cpp  Tridiag.hpp
src/PROBLEMS/: MethodForKR2.hpp  MethodForProblem1.hpp  MethodForProblem3.hpp  MethodsForProblem4.hpp
src/ProjectionMethods/ArnoldiAlgorythm/: ArnoldiAlg.hpp
src/ProjectionMethods/BiCG/: BiCG.cpp  BiCG.hpp
src/ProjectionMethods/GMRES/: GMRES.cpp  GMRES.hpp
src/QR/: Householder.cpp  Householder.hpp  QR.hpp
src/SMatrix/: StandardMatrix.hpp
src/SolverTridiag/: Solver.cpp  Solver.hpp
src/Tridiag/: Tridiag.hpp
src/Vect/: VectorOperations.cpp  VectorOperations.hpp
src/Work/: MethodForProblem3.hpp  Methods.hpp  MethodsForProblem4.hpp
tests/: CMakeLists.txt  Problem1.cpp  Problem3.cpp  Problem4.cpp  ProblemsKR2.cpp  test_BiCG.cpp  test_Dense.cpp  test_GMRES.cpp  test_GaussRev.cpp  test_Heisenberg.cpp  test_Hessenberg.cpp  test_IterMethods.cpp  test_LU.cpp  test_QR.cpp  test_cheb.cpp  tests_CSR.cpp  tests_Tridiag.cpp  tests_vect_op.cpp
(+2 files in other folders)
